# wasm-color-quantizer

./: .gitignore  Makefile  README.md  dev_server.py  index.html  script.js  styles.css
analysis/: sample_fn.ipynb
pkg/: colorcrunch.d.ts  colorcrunch.js  colorcrunch_bg.wasm  colorcrunch_bg.wasm.d.ts  colorcruncher.d.ts  colorcruncher.js  colorcruncher_bg.wasm  colorcruncher_bg.wasm.d.ts  kmeanspp.js  kmeanspp_bg.wasm  package.json  rust.js  rust_bg.wasm
rust/: Cargo.toml  heaptrack.cargo.29793.zst  heaptrack.cargo.29965.zst  out.perf
rust/benches/: criterion_benchmarks.rs  kmeans_benchmark.rs  kmeans_gpu_benchmark.rs  wasm_benchmarks.rs
rust/src/: distance.wgsl  kmeans.rs  lib.rs  python.rs  quantize.rs  types.rs  utils.rs  wasm.rs
rust/src/kmeans/: config.rs  distance.rs  gpu.rs  hamerly.rs  initializer.rs  lloyd.rs  lloyd_gpu.rs  lloyd_gpu.wgsl  types.rs  utils.rs
rust/src/kmeans/gpu/: buffers.rs  common.rs  cubecl.rs  lloyd_gpu1.rs  lloyd_gpu1.wgsl  lloyd_gpu2.rs  lloyd_gpu2.wgsl  lloyd_gpu4.rs  lloyd_gpu4.wgsl  wgpu.rs
rust/src/kmeans/gpu/wgpu/: common.rs  lloyd_gpu1.rs
scripts/: compare_benchmarks.py  get_time_fn.py
