[package]
name = "colorcrunch"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Deakos <mwoolnerdeakos@gmail.com>"]
license = "MIT"
description = "A fast, wasm-compatible color quantization library written in Rust"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["pyo3","numpy"]
gpu = ["wgpu", "winit", "env_logger", "log"]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "wasm_benchmarks"
harness = false

[[bench]]
name = "criterion_benchmarks"
harness = false

[dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
pyo3 = { version = "0.21.0", features = ["extension-module"], optional=true }
numpy = { version = "0.21.0", optional = true }

rand = "0.8.5"
wasm-bindgen = "0.2.92"
itertools = "0.13.0"
wgpu = { version = "0.20.1", optional = true }
winit = { version = "0.30.3", features = ["rwh_05"], optional = true }
env_logger = { version = "0.11.3", optional = true }
log = { version = "0.4.22", optional = true }
futures-intrusive = "0.5.0"
bytemuck = "1.16.1"
futures = "0.3.30"



[dev-dependencies]
statrs = "0.17.1"
wasm-bindgen-test = "0.3.42"
