[package]
name = "colorcrunch"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Deakos <mwoolnerdeakos@gmail.com>"]
license = "MIT"
description = "A fast, wasm-compatible color quantization library written in Rust"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.bench]
debug = true

[features]
default = ["wasm","gpu"]
python = ["pyo3","numpy"]
wasm = ["js-sys", "wasm-bindgen", "console_log", "console_error_panic_hook"]
gpu = ["wgpu", "env_logger", "log", "bytemuck", "wasm-bindgen-futures"]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5.1", features = ["async_futures"] }

[[bench]]
name = "wasm_benchmarks"
harness = false

[[bench]]
name = "criterion_benchmarks"
harness = false

[[bench]]
name = "kmeans_gpu_benchmark"
harness = false

[dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
pyo3 = { version = "0.21.0", features = ["extension-module"], optional=true }
numpy = { version = "0.21.0", optional = true }

bytemuck = { version = "1.16.1", features = ["derive"], optional = true }
env_logger = { version = "0.11.3", optional = true }
futures = "0.3.30"
futures-intrusive = "0.5.0"
itertools = "0.13.0"
js-sys = { version = "0.3.69", optional = true }
log = { version = "0.4.22", optional = true }
rand = "0.8.5"
wasm-bindgen = { version = "0.2.92", optional = true}
wgpu = { version = "0.20.1", optional = true }
wasm-bindgen-futures = { version = "0.4.42", optional = true }
console_log = { version = "1.0.0", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }


[dev-dependencies]
statrs = "0.17.1"
wasm-bindgen-test = "0.3.42"
